Refactor design tokens documentation across multiple components for consistency and clarity

--- a/app/chip/dev/page.mdx
+++ b/app/chip/dev/page.mdx
@@ -30,11 +30,11 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for Chip
 
-| **Token**                                         | **Color for**   | **State/Meaning**                                                                                                 | **CSS Selector(s)** |
-| ------------------------------------------------- | --------------- | ----------------------------------------------------------------------------------------------------------------- | ------------------- |
-| **--par-color-text-chip-kind-state-color-status** | Chip text color | kind: outlined/glass, state: selected/unselected, color: neutral/accent, status: enabled/hovered/pressed/disabled | .chip               |
-| **--par-color-bg-chip-kind-state-color-status**   | Chip background | kind, state, color, status as above                                                                               | .chip               |
-| **--par-color-border-chip-state-color-status**    | Chip border     | state: selected/unselected, color, status as above                                                                | .chip               |
+| **Token**                                                     | **Color for**   | **State/Meaning**                                                                                                 | **CSS Selector(s)** |
+| ------------------------------------------------------------- | --------------- | ----------------------------------------------------------------------------------------------------------------- | ------------------- |
+| **--par-color-text-chip-\<kind\>-\<state\>-color-\<status\>** | Chip text color | kind: outlined/glass, state: selected/unselected, color: neutral/accent, status: enabled/hovered/pressed/disabled | .chip               |
+| **--par-color-bg-chip-\<kind\>-\<state\>-color-\<status\>**   | Chip background | kind, state, color, status as above                                                                               | .chip               |
+| **--par-color-border-chip-\<state\>-color-\<status\>**        | Chip border     | state: selected/unselected, color, status as above                                                                | .chip               |
 
 > _Note: Replace `kind`, `state`, `color`, `status` with the corresponding values: kind = outlined/glass, state = selected/unselected, color = neutral/accent, status = enabled/hovered/pressed/disabled._
 
