--- a/app/email-input/dev/page.mdx
+++ b/app/email-input/dev/page.mdx
@@ -93,6 +93,12 @@ import CodePreview from '@components/showcase/CodePreview';
   <Demo.DomainEmailInputAlternativeMediumDomainGmail />
 </CodePreview>
 
+## Design Tokens for EmailInput
+
+> _Note: EmailInput uses the same design tokens as the Input component. See [BaseInput Design Tokens](../base-input/dev) for the full list of available tokens._
+
+---
+
 ## EmailInput API Reference
 
 ### `<EmailInput />`
