--- a/app/file-input/dev/page.mdx
+++ b/app/file-input/dev/page.mdx
@@ -22,7 +22,7 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for FileInput
 
-> _Note: FileInput uses the same design tokens as the Input component. See Input documentation for available tokens._
+> _Note: FileInput uses the same design tokens as the Input component. See [BaseInput Design Tokens](../base-input/dev) for available tokens._
 
 ---
 
