--- a/app/number-input/dev/page.mdx
+++ b/app/number-input/dev/page.mdx
@@ -144,30 +144,7 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for NumberInput
 
-| **Token**                                  | **Color for**                | **State/Meaning** | **CSS Selector(s)**                                                          |
-| ------------------------------------------ | ---------------------------- | ----------------- | ---------------------------------------------------------------------------- |
-| **--par-color-bg-field-enabled**           | Input background             | Enabled           | `.number-input .par-input:enabled`                                           |
-| **--par-color-bg-field-hovered**           | Input background             | Hovered           | `.number-input .par-input:hover`                                             |
-| **--par-color-bg-field-disabled**          | Input background             | Disabled          | `.number-input .par-input:disabled`                                          |
-| **--par-color-bg-field-readonly**          | Input background             | Readonly          | `.number-input .par-input[readonly]`                                         |
-| **--par-color-bg-field-invalid**           | Input background             | Invalid/Error     | `.number-input .par-input.error-state`                                       |
-| **--par-color-border-field-enabled**       | Input border                 | Enabled           | `.number-input .par-input:enabled`                                           |
-| **--par-color-border-field-hovered**       | Input border                 | Hovered           | `.number-input .par-input:hover`                                             |
-| **--par-color-border-field-disabled**      | Input border                 | Disabled          | `.number-input .par-input:disabled`                                          |
-| **--par-color-border-field-invalid**       | Input border                 | Invalid/Error     | `.number-input .par-input.error-state`                                       |
-| **--par-color-border-field-focused**       | Input border                 | Focused           | `.number-input .par-input:focus`                                             |
-| **--par-color-text-field-placeholder**     | Placeholder text             | Any               | `.number-input .par-input::placeholder`                                      |
-| **--par-color-text-field-filled**          | Input text                   | Filled            | `.number-input .par-input`                                                   |
-| **--par-color-text-field-label**           | Label text                   | Any               | `.number-input-label`                                                        |
-| **--par-color-text-field-disabled**        | Input text                   | Disabled          | `.number-input .par-input:disabled`                                          |
-| **--par-color-text-field-readonly**        | Input text                   | Readonly          | `.number-input .par-input[readonly]`                                         |
-| **--par-color-text-field-invalid**         | Input text                   | Invalid/Error     | `.number-input .par-input.error-state`                                       |
-| **--par-color-icon-field-button-enabled**  | Icon color (button enabled)  | Enabled           | `.number-input .clear-button:enabled`, `.number-input .input-icon:enabled`   |
-| **--par-color-icon-field-button-hovered**  | Icon color (button hovered)  | Hovered           | `.number-input .clear-button:hover`, `.number-input .input-icon:hover`       |
-| **--par-color-icon-field-button-pressed**  | Icon color (button pressed)  | Pressed           | `.number-input .clear-button:active`, `.number-input .input-icon:active`     |
-| **--par-color-icon-field-button-disabled** | Icon color (button disabled) | Disabled          | `.number-input .clear-button:disabled`, `.number-input .input-icon:disabled` |
-
-> _Note: NumberInput uses the same design tokens as the Input component. See Input documentation for available tokens._
+> _Note: NumberInput uses the same design tokens as the Input component. See [BaseInput documentation](../base-input/dev) for available tokens._
 
 ---
 
