--- a/app/password-input/dev/page.mdx
+++ b/app/password-input/dev/page.mdx
@@ -123,7 +123,7 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for PasswordInput
 
-> _Note: PasswordInput uses the same design tokens as the Input component. See Input documentation for available tokens._
+> _Note: PasswordInput uses the same design tokens as the Input component. See [BaseInput documentation](../base-input/dev) for available tokens._
 
 ---
 
