--- a/app/text-input/dev/page.mdx
+++ b/app/text-input/dev/page.mdx
@@ -165,30 +165,7 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for TextInput
 
-| **Token**                                  | **Color for**                | **State/Meaning** | **CSS Selector(s)**                                                                 |
-| ------------------------------------------ | ---------------------------- | ----------------- | ----------------------------------------------------------------------------------- |
-| **--par-color-bg-field-enabled**           | Text input background        | Enabled           | `.par-input:enabled`                                                                |
-| **--par-color-bg-field-hovered**           | Text input background        | Hovered           | `.par-input:hover`                                                                  |
-| **--par-color-bg-field-disabled**          | Text input background        | Disabled          | `.par-input:disabled`                                                               |
-| **--par-color-bg-field-readonly**          | Text input background        | Readonly          | `.par-input[readonly]`                                                              |
-| **--par-color-bg-field-invalid**           | Text input background        | Invalid/Error     | `.par-input.error-state`                                                            |
-| **--par-color-border-field-enabled**       | Text input border            | Enabled           | `.par-input:enabled`                                                                |
-| **--par-color-border-field-hovered**       | Text input border            | Hovered           | `.par-input:hover`                                                                  |
-| **--par-color-border-field-disabled**      | Text input border            | Disabled          | `.par-input:disabled`                                                               |
-| **--par-color-border-field-invalid**       | Text input border            | Invalid/Error     | `.par-input.error-state`                                                            |
-| **--par-color-border-field-focused**       | Text input border            | Focused           | `.par-input:focus`                                                                  |
-| **--par-color-text-field-placeholder**     | Placeholder text             | Any               | `.par-input::placeholder`                                                           |
-| **--par-color-text-field-filled**          | Text input text              | Filled            | `.par-input`                                                                        |
-| **--par-color-text-field-label**           | Label text                   | Any               | `.floating-label`                                                                   |
-| **--par-color-text-field-disabled**        | Text input text              | Disabled          | `.par-input:disabled`                                                               |
-| **--par-color-text-field-readonly**        | Text input text              | Readonly          | `.par-input[readonly]`                                                              |
-| **--par-color-text-field-invalid**         | Text input text              | Invalid/Error     | `.par-input.error-state`                                                            |
-| **--par-color-icon-field-button-enabled**  | Icon color (button enabled)  | Enabled           | `.right-element-container button:enabled, .left-element-container button:enabled`   |
-| **--par-color-icon-field-button-hovered**  | Icon color (button hovered)  | Hovered           | `.right-element-container button:hover, .left-element-container button:hover`       |
-| **--par-color-icon-field-button-pressed**  | Icon color (button pressed)  | Pressed           | `.right-element-container button:active, .left-element-container button:active`     |
-| **--par-color-icon-field-button-disabled** | Icon color (button disabled) | Disabled          | `.right-element-container button:disabled, .left-element-container button:disabled` |
-
-> _Note: TextInput uses the same design tokens as the Input component. See Input documentation for available tokens. Tokens are referenced from `BaseInput/variables.css`._
+> _Note: TextInput uses the same design tokens as the Input component. See [Input](../base-input/dev) documentation for available tokens. Tokens are referenced from `BaseInput/variables.css`._
 
 ---
 
