--- a/app/pinfield/dev/page.mdx
+++ b/app/pinfield/dev/page.mdx
@@ -75,30 +75,7 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for PinField
 
-| **Token**                                  | **Color for**                | **State/Meaning** | **CSS Selector(s)**                                    |
-| ------------------------------------------ | ---------------------------- | ----------------- | ------------------------------------------------------ |
-| **--par-color-bg-field-enabled**           | Pin field background         | Enabled           | `.pinfield-input:not(:disabled):not([readonly])`       |
-| **--par-color-bg-field-hovered**           | Pin field background         | Hovered           | `.pinfield-input:hover:not(:disabled):not([readonly])` |
-| **--par-color-bg-field-disabled**          | Pin field background         | Disabled          | `.pinfield.pinfield-disabled .pinfield-input`          |
-| **--par-color-bg-field-readonly**          | Pin field background         | Readonly          | `.pinfield.pinfield-read-only .pinfield-input`         |
-| **--par-color-bg-field-invalid**           | Pin field background         | Invalid/Error     | `.pinfield.pinfield-invalid .pinfield-input`           |
-| **--par-color-border-field-enabled**       | Pin field border             | Enabled           | `.pinfield-item`                                       |
-| **--par-color-border-field-hovered**       | Pin field border             | Hovered           | `.pinfield-item:hover`                                 |
-| **--par-color-border-field-disabled**      | Pin field border             | Disabled          | `.pinfield.pinfield-disabled .pinfield-item`           |
-| **--par-color-border-field-invalid**       | Pin field border             | Invalid/Error     | `.pinfield.pinfield-invalid .pinfield-item`            |
-| **--par-color-border-field-focused**       | Pin field border             | Focused           | `.pinfield-item:focus-within`                          |
-| **--par-color-text-field-placeholder**     | Placeholder text             | Any               | `.pinfield-placeholder`                                |
-| **--par-color-text-field-filled**          | Pin field text               | Filled            | `.pinfield-input`                                      |
-| **--par-color-text-field-label**           | Label text                   | Any               | `.pinfield-label`                                      |
-| **--par-color-text-field-disabled**        | Pin field text               | Disabled          | `.pinfield.pinfield-disabled .pinfield-input`          |
-| **--par-color-text-field-readonly**        | Pin field text               | Readonly          | `.pinfield.pinfield-read-only .pinfield-input`         |
-| **--par-color-text-field-invalid**         | Pin field text               | Invalid/Error     | `.pinfield.pinfield-invalid .pinfield-input`           |
-| **--par-color-icon-field-button-enabled**  | Icon color (button enabled)  | Enabled           | (not applicable, no separate icon button)              |
-| **--par-color-icon-field-button-hovered**  | Icon color (button hovered)  | Hovered           | (not applicable, no separate icon button)              |
-| **--par-color-icon-field-button-pressed**  | Icon color (button pressed)  | Pressed           | (not applicable, no separate icon button)              |
-| **--par-color-icon-field-button-disabled** | Icon color (button disabled) | Disabled          | (not applicable, no separate icon button)              |
-
-> _Note: PinField uses the same design tokens as Input. See Input documentation for more details._
+> _Note: PinField uses the same design tokens as Input. See [Input](../base-input/dev) documentation for more details._
 
 ---
 
